--- a/src/Passes/CMakeLists.txt
+++ b/src/Passes/CMakeLists.txt
@@ -21,11 +21,11 @@
 #    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 #    SOFTWARE.
 #    
-#    File:          /Passes/CMakeLists.txt
+#    File:          /src/Passes/CMakeLists.txt
 #    Project:       CGRAOmp
 #    Author:        Takuya Kojima in Amano Laboratory, Keio University (tkojima@am.ics.keio.ac.jp)
 #    Created Date:  26-08-2021 20:53:10
-#    Last Modified: 03-09-2021 18:41:07
+#    Last Modified: 04-09-2021 17:17:55
 #
 
 # set LLVM version
@@ -54,28 +54,6 @@ include(AddLLVM)
 
 include_directories(${LLVM_INCLUDE_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
-
-
-if (CGRAOMP_ENABLE_DOXGEN)
-  find_package(Doxygen)
-  IF(DOXYGEN_FOUND)
-    message("-- Enables building doxygen")
-    set(DOXYGEN_CONF_FILE "doxygen.conf")
-    set(DOXYGEN_CONF_PATH   ${CMAKE_CURRENT_BINARY_DIR}/${DOXYGEN_CONF_FILE})
-    set(DOXYGEN_SOURCE_DIR ${CMAKE_CURRENT_BINARY_DIR})
-    set(DOXYGEN_TARGET "doc" )
-
-    configure_file(${DOXYGEN_CONF_FILE}.in ${DOXYGEN_CONF_PATH})
-
-    add_custom_target(${DOXYGEN_TARGET} ALL
-                    ${DOXYGEN_EXECUTABLE} ${DOXYGEN_CONF_PATH}
-                    DEPENDS  ${DOXYGEN_CONF_PATH})
-    install(DIRECTORY ${CMAKE_BINARY_DIR}/${CGRAOMP_INSTALL_DOXYGEN_HTML_DIR}/ 
-    DESTINATION ${CMAKE_INSTALL_PREFIX}/${CGRAOMP_INSTALL_DOXYGEN_HTML_DIR})
-  else (DOXYGEN_FOUND)
-    message (WARNING "building doxygen option is specified but doxygen is not found")
-  endif (DOXYGEN_FOUND)
-endif()
 
 # list of passes to be built
 set (LLVM_PASSLIB_LIST
