--- a/src/doxygen.conf.in
+++ b/src/doxygen.conf.in
@@ -791,8 +791,10 @@ WARN_LOGFILE           =
 # spaces. See also FILE_PATTERNS and EXTENSION_MAPPING
 # Note: If this tag is empty the current directory is searched.
 
-INPUT                  = @CMAKE_SOURCE_DIR@/Passes \
-                         @CMAKE_SOURCE_DIR@/include 
+INPUT                  = @DOXYGEN_SOURCE_DIR@/Passes \
+                         @CMAKE_SOURCE_DIR@/include \
+                         @DOXYGEN_SOURCE_DIR@/doxygen-main.md
+
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
@@ -984,7 +986,7 @@ FILTER_SOURCE_PATTERNS =
 # (index.html). This can be useful if you have a project on for instance GitHub
 # and want to reuse the introduction page also for the doxygen output.
 
-USE_MDFILE_AS_MAINPAGE =
+USE_MDFILE_AS_MAINPAGE = doxygen-main.md
 
 #---------------------------------------------------------------------------
 # Configuration options related to source browsing
