--- a/src/Passes/CGRAOmpPlugins/CMakeLists.txt
+++ b/src/Passes/CGRAOmpPlugins/CMakeLists.txt
@@ -21,17 +21,18 @@
 #    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 #    SOFTWARE.
 #    
-#    File:          /Passes/CGRAOmpPlugins/CMakeLists.txt
+#    File:          /src/Passes/CGRAOmpPlugins/CMakeLists.txt
 #    Project:       CGRAOmp
 #    Author:        Takuya Kojima in Amano Laboratory, Keio University (tkojima@am.ics.keio.ac.jp)
 #    Created Date:  27-08-2021 14:18:38
-#    Last Modified: 28-08-2021 17:44:40
+#    Last Modified: 05-09-2021 18:39:42
 #
 add_llvm_library( libCGRAOmpPlugins MODULE
   ## append source file list here
   OptionPlugin.cpp
   CGRAModel.cpp
   CGRADataFlowGraph.cpp
+  CGRAInstMap.cpp
 
   DEPENDS
   intrinsics_gen
