develop some Passes

--- a/src/Passes/CGRAOmpAnnotationPass/CMakeLists.txt
+++ b/src/Passes/CGRAOmpAnnotationPass/CMakeLists.txt
@@ -21,53 +21,23 @@
 #    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 #    SOFTWARE.
 #    
-#    File:          /src/Passes/CMakeLists.txt
+#    File:          /src/Passes/CGRAOmpAnnotationPass/CMakeLists.txt
 #    Project:       CGRAOmp
 #    Author:        Takuya Kojima in Amano Laboratory, Keio University (tkojima@am.ics.keio.ac.jp)
-#    Created Date:  26-08-2021 20:53:10
-#    Last Modified: 15-09-2021 10:00:43
+#    Created Date:  15-09-2021 09:53:01
+#    Last Modified: 15-09-2021 09:53:01
 #
+add_llvm_library( libCGRAOmpAnnotationPass MODULE
+  ## append source file list here
+  CGRAOmpAnnotationPass.cpp
 
-# set LLVM version
-if(NOT DEFINED LLVM_VERSION_MAJOR)
-  set(LLVM_VERSION_MAJOR 12)
-endif()
-if(NOT DEFINED LLVM_VERSION_MINOR)
-  set(LLVM_VERSION_MINOR 0)
-endif()
-if(NOT DEFINED LLVM_VERSION_PATCH)
-  set(LLVM_VERSION_PATCH 0)
-endif()
-if(NOT DEFINED LLVM_VERSION_SUFFIX)
-  set(LLVM_VERSION_SUFFIX "")
-endif()
+  DEPENDS
+  intrinsics_gen
 
-# get LLVM cmake dir
-set (LLVM_MIN_VERSION "${LLVM_VERSION_MAJOR}.${LLVM_VERSION_MINOR}.${LLVM_VERSION_PATCH}")
-execute_process(COMMAND llvm-config --cmakedir OUTPUT_VARIABLE LLVM_DIR)
+  PLUGIN_TOOL
+  opt
+  )
 
-find_package(LLVM ${LLVM_MIN_VERSION} REQUIRED CONFIG)
-message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
-
-list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
-include(AddLLVM)
-
-include_directories(${LLVM_INCLUDE_DIRS})
-add_definitions(${LLVM_DEFINITIONS})
-
-# list of passes to be built
-set (LLVM_PASSLIB_LIST
-  CGRAOmpComponents
-  CGRAOmpPass
-  CGRAOmpVerifyPass
-  CGRAOmpAnnotationPass
-)
-
-# add for each lib
-message("-- LLVM libraries to be built for CGRAOmp")
-foreach (PASSLIB IN LISTS LLVM_PASSLIB_LIST)
-  add_subdirectory(${PASSLIB})
-  message(" add target library: ${PASSLIB}")
-endforeach()
-
-
+target_include_directories( libCGRAOmpAnnotationPass
+  PRIVATE ${PROJECT_SOURCE_DIR}/include
+  )
