--- a/src/Passes/CGRAOmpVerifyPass/CMakeLists.txt
+++ b/src/Passes/CGRAOmpVerifyPass/CMakeLists.txt
@@ -21,16 +21,19 @@
 #    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 #    SOFTWARE.
 #    
-#    File:          /Passes/CGRAOmpVerifyPass/CMakeLists.txt
+#    File:          /src/Passes/CGRAOmpVerifyPass/CMakeLists.txt
 #    Project:       CGRAOmp
 #    Author:        Takuya Kojima in Amano Laboratory, Keio University (tkojima@am.ics.keio.ac.jp)
 #    Created Date:  27-08-2021 17:07:48
-#    Last Modified: 27-08-2021 17:07:48
+#    Last Modified: 14-12-2021 13:49:48
 #
 add_llvm_library( libCGRAOmpVerifyPass MODULE
   ## append source file list here
   VerifyPass.cpp
-
+  DecoupledAnalysis.cpp
+  RegisterPass.cpp
+  VerifyPasses.def
+  
   DEPENDS
   intrinsics_gen
 
