--- a/src/Passes/CGRAOmpComponents/CMakeLists.txt
+++ b/src/Passes/CGRAOmpComponents/CMakeLists.txt
@@ -23,7 +23,7 @@
 #    
 #    File:          /src/Passes/CGRAOmpComponents/CMakeLists.txt
 #    Project:       CGRAOmp
-#    Author:        Takuya Kojima in Amano Laboratory, Keio University (tkojima@am.ics.keio.ac.jp)
+#    Author:        Takuya Kojima in The University of Tokyo (tkojima@hal.ipc.i.u-tokyo.ac.jp)
 #    Created Date:  27-08-2021 14:18:38
 #    Last Modified: 17-07-2022 19:38:18
 #
