--- a/src/Passes/CGRAOmpVerifyPass/CMakeLists.txt
+++ b/src/Passes/CGRAOmpVerifyPass/CMakeLists.txt
@@ -23,7 +23,7 @@
 #    
 #    File:          /src/Passes/CGRAOmpVerifyPass/CMakeLists.txt
 #    Project:       CGRAOmp
-#    Author:        Takuya Kojima in Amano Laboratory, Keio University (tkojima@am.ics.keio.ac.jp)
+#    Author:        Takuya Kojima in The University of Tokyo (tkojima@hal.ipc.i.u-tokyo.ac.jp)
 #    Created Date:  27-08-2021 17:07:48
 #    Last Modified: 18-02-2022 18:42:00
 #
