--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -25,13 +25,13 @@
 #    Project:       CGRAOmp
 #    Author:        Takuya Kojima in Amano Laboratory, Keio University (tkojima@am.ics.keio.ac.jp)
 #    Created Date:  18-01-2022 19:50:06
-#    Last Modified: 20-07-2022 14:52:13
+#    Last Modified: 20-07-2022 17:31:02
 #
 name: Release
 
 on:
   release:
-    types: [released]
+    types: [published]
 
 jobs:
   build:
